<resources>
    <string name="app_name">HobbyHub</string>
    <string name="find_buddy_title">Find Buddy</string>
    <string name="chat_room_title">Chat Room</string>
    <string name="book_room_title">Book Room</string>
    <string name="event_title">Event</string>
    <string name="event_details_title">Event Details</string>
    <string name="profile_title">Profile</string>
    <string name="login_title">LOG IN</string>
    <string name="register_title">Register</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="enter_name">USERNAME</string>
    <string name="enter_phone_no">MOBILE NUMBER</string>
    <string name="enter_email">EMAIL ADDRESS</string>
    <string name="enter_password">PASSWORD</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forget_pwd_text">FORGOTTEN PASSWORD?</string>
    <string name="reset_pwd_text">RESET PASSWORD</string>
    <string name="register_label">NO ACCOUNT? SIGN UP HERE</string>
    <string name="login_label">HAVE ACCOUNT? SIGN IN HERE</string>
    <string name="back_to_login">BACK TO LOGIN</string>
    <string name="google_map_api_key">AIzaSyA_0OUex5GS9XOMk5s4k8_1kuemeE9svL0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_your_hobbies">Select your hobbies</string>
    <string name="select_hobbies_subtitle">Choose the right for you!</string>
    <string name="location">Location</string>
    <string name="save_event">Save Event</string>
    <string name="activity">Activity</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="time">Time</string>
    <string name="select_time">Select Time</string>
    <string name="participants">Participants</string>
    <string name="add_event">Add Event</string>
    <string name="enter_participants">Enter participants</string>
    <string name="create_event_title">Create Event</string>
    <string name="event_details">Event Details</string>
    <string name="display_date">Date:</string>
    <string name="display_time">Time:</string>
    <string name="display_location">Location:</string>
    <string name="display_participants">Participants:</string>
    <string name="edit_event">Edit Event</string>
    <string name="delete_event">Delete Event</string>
    <string name="save_changes">Save Changes</string>
    <string name="event_id">Event ID</string>
    <string name="enter_event_id">Enter Event ID</string>
    <string name="arts_crafts"><![CDATA[Arts & Crafts]]></string>
    <string name="outdoor_activities">Outdoor Activities</string>
    <string name="food_cooking"><![CDATA[Food & Cooking]]></string>
    <string name="fitness_wellness"><![CDATA[Fitness & Wellness]]></string>
    <string name="technology_science"><![CDATA[Technology & Science]]></string>
    <string name="music_performance"><![CDATA[Music & Performance]]></string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="continue_tv">Continue</string>
    <string name="search_hobbies">Search Hobbies</string>
    <string name="find_hobby_buddy">Find your hobby buddy</string>
    <string name="recommended_hobbies">Recommended Hobbies</string>
    <string name="hobby_title">Hobby Title</string>
    <string name="find_buddy">Find Buddy</string>
    <string name="calendar">Calendar</string>
    <string name="open_calendar">Open Calendar</string>
    <string name="report_title">Reports</string>
    <string name="admin_reports">Admin Reports</string>
    <string name="user_activity_report">User Activity Report</string>
    <string name="hobby_popularity_report">Hobby Popularity Report</string>
    <string name="user_demographics_report">User Demographics Report</string>
    <string name="user_feedback_analysis">User Feedback Analysis</string>
    <string name="user_details">User Details</string>
    <string name="select_user">Select User</string>
    <string name="app_usage_time_histogram">App Usage Time Histogram</string>
    <string name="rating_distribution">Rating Distribution</string>
    <string name="feedback_comments">Feedback Comments</string>
    <string name="hobby_details">Hobby Details</string>
    <string name="description">Description</string>
    <string name="comprehensive_review">Comprehensive Review:</string>
    <string name="show_all">Show All</string>
    <string name="excellent">Excellent</string>
    <string name="very_good">Very Good</string>
    <string name="average">Average</string>
    <string name="poor">Poor</string>
    <string name="terrible">Terrible</string>
    <string name="category">Category</string>
    <string name="write_review">Write Review</string>
    <string name="write_your_review_here">Write your review here</string>
    <string name="submit_review">Submit Review</string>
    <string name="chats">Chats</string>
    <string name="username">Username</string>
    <string name="_12_00_pm">12:00 PM</string>
    <string name="marker_text">Marker Text</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="select_start_time">Select Start Time</string>
    <string name="selected_time_not_set">Selected Time: Not Set</string>
    <string name="select_end_time">Select End Time</string>
    <string name="unavailable_times_for_participants">Unavailable Times for Participants</string>
    <string name="common_feedback_themes">Common Feedback Themes</string>
    <string name="sentiment_analysis">Sentiment Analysis</string>
    <string name="most_popular_hobby_text">
    Most Popular by Rating: \n%1$s (%2$s stars)\n\n\nMost Popular by Picks: \n%3$s (%4$d picks)
</string>
    <string name="reward_achievement"><![CDATA[Reward & Achievement]]></string>
    <string name="current_streak_0">Current Streak: 0</string>
    <string name="_366_days">366 days</string>
    <string name="check_in">Check In</string>
    <string name="user_demographics">User Demographics</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="enter_your_location">Enter your location</string>
    <string name="submit">Submit</string>
    <string name="best_streak_rewards">Best Streak Rewards</string>
    <string name="best_streak">Best Streak</string>
    <string name="social_rewards">Social Rewards</string>
    <string name="social_leaderboard">Social Leaderboard</string>
    <string name="streak_leaderboard">Streak Leaderboard</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="profile">Profile</string>
    <string name="user_user_com">user@user.com</string>
    <string name="saved_hobbies">Saved Hobbies</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="your_recent_buddy">Your Recent Buddy</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="social">Social</string>
    <string name="post_description">Post description</string>
    <string name="_12">12</string>
    <string name="write_a_description">Write a description...</string>
    <string name="post">Post</string>
    <string name="create_post">Create Post</string>
    <string name="add_a_comment">Add a comment...</string>
    <string name="this_is_a_sample_comment">This is a sample comment</string>
    <string name="create_group_chat">Create Group Chat</string>
    <string name="create_group">Create Group</string>
    <string name="enable_your_fingerprint">Enable Your Fingerprint</string>
    <string name="enable_fingerprint_for_faster_login">Enable fingerprint for faster login</string>
    <string name="skip">Skip</string>
    <string name="enable">Enable</string>
    <string name="settings">Settings</string>
    <string name="enable_fingerprint">Enable Fingerprint</string>
    <string name="languages">Languages</string>
    <string name="hobby_category">Hobby Category</string>
    <string name="change_hobby_category">Change Hobby Category</string>
    <string name="home">Home</string>
    <string name="current_streak">Current Streak</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="please_select_your_location">Please select your location</string>
    <string name="please_select_your_gender">Please select your gender</string>
    <string name="average_rating_per_hobby">Average Rating per Hobby</string>
    <string-array name="language_options">
        <item>English</item>
        <item>Chinese</item>
        <item>Malay</item>
    </string-array>
</resources>