<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_people"
        android:title="@string/find_buddy_title" />

    <item
        android:id="@+id/socialFragment"
        android:icon="@drawable/ic_chat"
        android:title="@string/social" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_calendar"
        android:title="@string/event_title" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/profile_title" />

    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/ic_report"
        android:title="@string/report_title" />

</menu>
