<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="36dp"
    tools:context=".authentication.view.EnableFingerprintFragment">

    <!-- Title -->
    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:text="@string/enable_your_fingerprint"
        android:textColor="@color/primaryColor"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Illustration or Icon -->
    <ImageView
        android:id="@+id/fingerprintIllustration"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_fingerprint" />

    <!-- Description -->
    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/enable_fingerprint_for_faster_login"
        android:textColor="@color/dark_gray"
        android:textSize="16sp" />

    <!-- Enable Fingerprint Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enableFingerprintBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/primaryColor"
        android:clickable="true"
        android:text="@string/enable"
        android:textColor="@color/white" />

    <!-- Skip Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/skipBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/gray"
        android:clickable="true"
        android:text="@string/skip"
        android:textColor="@color/black" />

</LinearLayout>
