<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating_distribution"
            android:textStyle="bold" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/barChartRatings"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <LinearLayout
            android:id="@+id/legendRatingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/tvFeedbackTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback_comments"
            android:textStyle="bold"
            android:paddingTop="16dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFeedbackComments"
            android:layout_width="match_parent"
            android:layout_height="250dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/average_rating_per_hobby"
            android:textStyle="bold"
            android:paddingTop="16dp" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/barChartSentiment"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <LinearLayout
            android:id="@+id/legendLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_marginTop="16dp" />

    </LinearLayout>
</ScrollView>
